tests/fixtures/invalid/void_cast_used_as_scalar.c
int main(void) {
    int marker = 0;
    return (void)(marker = 1);
}
